chore: create scorboard

--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
     <script src="script/game.js" defer type="module"></script>
   </head>
   <body>
-    <div class="board">
-      <div id="game-zone"></div>
-    </div>
+    <nav><p>SnakeScript</p></nav>
+    <section>
+      <article class="board">
+        <div id="game-zone"></div>
+      </article>
+      <aside>
+        <p>Pontuação</p>
+        <p id="point">10</p>
+        <p>Velocidade</p>
+        <p id="speed"></p>
+      </aside>
+    </section>
   </body>
 </html>
